force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/fields/DESKSCMT__AccountId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__AccountId__c</fullName>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>