force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/fields/DESKSCMT__App_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__App_Id__c</fullName>
    <label>App Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>