force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/fields/DESKSCMT__Desk_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Company_Id__c</fullName>
    <description>Desk Id Value</description>
    <label>Desk Company Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>