force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/fields/domains__c.field-meta.xml
<CustomField>
    <fullName>domains__c</fullName>
    <label>Domains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>