force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>