force-app/main/default/objects/DESKSCMT__Desk_Account_Migration__c/listViews/DESKSCMT__Failed_Accounts.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Accounts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Accounts</label>
</ListView>